--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" media="all" href="style.css">
-	<title>gh-pages template</title>
+	<title>Понял да?</title>
 </head>
 <body>
   <div id="helloworld">Привет пидор!</div>
