--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset='utf-8' />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" media="all" href="style.css">
-	<title>Понял да?</title>
+    <meta charset="utf-8" />
+    <title>Github Pages SPA</title>
+    <script type="text/javascript" src="../ghspa.js"></script>
 </head>
 <body>
-	<div id="helloworld">Привет пидор!</div>
-	
-	<script>
-	var vars = {}; window.location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) { vars[key] = value; }); return vars;
-	var fType = getUrlVars()["type"];
-	console.log(fType);
-	</script>
+  <a href="/gh-pages-spa">Home</a>
+  <a href="/gh-pages-spa/about">About</a>
+  <a href="/gh-pages-spa/contact">Contact</a>
 </body>
+
 </html>
