--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="../ghspa.js"></script>
 </head>
 <body>
-  <a href="/gh-pages-spa">Home</a>
-  <a href="/gh-pages-spa/about">About</a>
-  <a href="/gh-pages-spa/contact">Contact</a>
+  <a href="/">Home</a>
+  <a href="/about">About</a>
+  <a href="/contact">Contact</a>
 </body>
 
 </html>
