--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8" />
     <title>Github Pages SPA</title>
     <script type="text/javascript" src="../ghspa.js"></script>
+    <script type="text/javascript" src="../clipboard.min.js"></script>
 </head>
 <body>
-  <a href="/">Home</a>
-  <a href="/about">About</a>
-  <a href="/contact">Contact</a>
+
 </body>
 
 </html>
