--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Github Pages SPA</title>
-    <script type="text/javascript" src="../noAsk.js"></script>
+    <script type="text/javascript" src="../ghspa.js"></script>
     <script type="text/javascript" src="../clipboard.min.js"></script>
 </head>
 <body>
