--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Быстрая ссылка телеграм</title>
+    <title>Lightning⚡️</title>
     <script type="text/javascript" src="../ghspa.js"></script>
     <script type="text/javascript" src="../clipboard.min.js"></script>
 </head>
