--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>404</title>
+    <title>Yeah Science, Bitch</title>
     <script type="text/javascript" src="../ghspa.js"></script>
 </head>
 
