--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Lightning⚡️</title>
-    <script type="text/javascript" src="../ghspa.js"></script>
-    <script type="text/javascript" src="../clipboard.min.js"></script>
+    loadJS( "../ghspa.js" );
+    loadJS( "../../clipboard.min.js" );
 </head>
 <body>
 
