--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Lightning⚡️</title>
+    <script>
     loadJS( "../ghspa.js" );
     loadJS( "../../clipboard.min.js" );
+    </script>
 </head>
 <body>
 
