--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Lightning⚡️</title>
+    <script src="../loadJS.js"></script>
     <script>
     loadJS( "../ghspa.js" );
     loadJS( "../../clipboard.min.js" );
