--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Lightning⚡️</title>
-    <script src="../loadJS.js"></script>
-    <script>
-    loadJS( "../ghspa.js" );
-    loadJS( "../../clipboard.min.js" );
-    </script>
+    <script src="../ghspa.js"></script>
+    <script src="../clipboard.min.js"></script>
 </head>
 <body>
-
+    test1
 </body>
 
 </html>
