--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lightning⚡️</title>
-    <script src="../ghspa.js"></script>
-    <script src="../clipboard.min.js"></script>
+    <script src="../loadJS.js"></script>
+    <script>
+    loadJS( "../ghspa.js" );
+    loadJS( "../clipboard.min.js" );
+    </script>
 </head>
 <body>
-    test1
+    test2
 </body>
 
 </html>
