--- a/404.html
+++ b/404.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8" />
-    <title>TelegramGo</title>
-    <script type="text/javascript" src="../ghspa.js"></script>
-</head>
-
-<body>
-</body>
-
-</html>
+<!DOCTYPE html><html><head> <meta charset="utf-8" /> <title>TelegramGo</title> <script type="text/javascript" src="../ghspa.js"></script></head><body></body></html>
