--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Lightning⚡️</title>
     <script src="../loadJS.js"></script>
     <script>
-        loadJS( "../ghspa.js" );
-        loadJS( "../clipboard.min.js" );
+        loadJS( "../main.js" );
+        //loadJS( "../clipboard.min.js" );
     </script>
 </head>
 <body>
-    test2
+    test3
 </body>
 </html>
