--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lightning⚡️</title>
-    <script src="../loadJS.js"></script>
-    <script>
-        loadJS( "../main.js" );
+    <script src="../main.js"></script>
+    //<script>
+        //loadJS( "../main.js" );
         //loadJS( "../clipboard.min.js" );
-    </script>
+    //</script>
 </head>
 <body>
     test3
