--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
     </script>
 </head>
 <body>
-    test3
+    <div class="main">test</div>
+    <style>
+        .main
+            {
+                 margin: 0 auto;
+                 max-width: 700px;
+            }
+    </style>
 </body>
 </html>
