--- a/index.html
+++ b/index.html
@@ -49,13 +49,31 @@
     </script>
 </head>
 <body>
-    <div class="main">test</div>
+    <div class="outer-div">
+        <div class="inner-div">
+            TelegramGo
+        </div>
+    </div>
     <style>
-        .main
-            {
-                 margin: 0 auto;
-                 max-width: 700px;
-            }
+        body
+        {
+          padding: 30px;
+          background-color: #fcfcfc;
+        }
+        .outer-div
+        {
+          padding: 30px;
+          background-color: #f3f3f3;
+        }
+        .inner-div
+        {
+          margin: auto;
+          width: 100px;
+          height: 100px;
+          background-color: #ccc;
+          border-radius: 3px;
+          text-align: center;
+        }
     </style>
 </body>
 </html>
