--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         }
         .outer-div
         {
-          padding: 30px;
+          padding-left: 30px;
+          padding-right: 30px;
+          padding-top: 30px;
+          padding-bottom: -30px;
+          width: 100vh;
           background-color: #f3f3f3;
         }
         .inner-div
