--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
         }
         .outer-div
         {
-          padding-left: 30px;
-          padding-right: 30px;
-          padding-top: 30px;
-          padding-bottom: -30px;
-          width: 100vh;
+          padding: 30px;
+          min-height: 100vh;
           background-color: #f3f3f3;
         }
         .inner-div
