--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <style>
         body
         {
-          padding: 30px;
           background-color: #fcfcfc;
         }
         .outer-div
         {
           padding: 30px;
-          min-height: 100vh;
+          margin: -30px;
+          min-height: 100%;
           background-color: #f3f3f3;
         }
         .inner-div
