--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         .outer-div
         {
           padding: 30px;
-          margin: -30px;
-          min-height: 100%;
+          height: 100%;
           background-color: #f3f3f3;
         }
         .inner-div
