--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         </div>
     </div>
     <style>
-        body
-        {
-          background-color: #fcfcfc;
+         html, body {
+            height: 100%;
+            margin: 0;
         }
         .outer-div
         {
           padding: 30px;
-          height: 100%;
+          min-height: 100%;
           background-color: #f3f3f3;
         }
         .inner-div
