--- a/index.html
+++ b/index.html
@@ -49,30 +49,19 @@
     </script>
 </head>
 <body>
-    <div class="outer-div">
-        <div class="inner-div">
-            TelegramGo
-        </div>
+    <div>
+        TelegramGo
     </div>
     <style>
-         html, body {
+        html, body, div {
             height: 100%;
+            width: 100%;
+            height: 100vh;
+            width: 100vw;
             margin: 0;
         }
-        .outer-div
-        {
-          padding: 30px;
-          min-height: 100%;
-          background-color: #f3f3f3;
-        }
-        .inner-div
-        {
-          margin: auto;
-          width: 100px;
-          height: 100px;
-          background-color: #ccc;
-          border-radius: 3px;
-          text-align: center;
+        div {
+            text-align: center;
         }
     </style>
 </body>
