--- a/404.html
+++ b/404.html
@@ -30,6 +30,6 @@
      }
    }
   /* if current document is 404 page page, redirect to index.html otherwise resolve */
-  document.title === 'TelegramGo' ? redirect() : resolve()
+  document.title === 'TelegramGoTo' ? redirect() : resolve()
 }(window.location, window.projectPages || false ))</script>
 </head><body></body></html>
