--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    }
 
   /* if current document is 404 page page, redirect to index.html otherwise resolve */
-  document.title === 'TelegramGo' ? redirect() : resolve()
+  document.title === 'TelegramGoTo' ? redirect() : resolve()
 
 
 }(window.location, window.projectPages || false ))
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div>
-        TelegramGo
+        Telegram GoTo
     </div>
     <style>
         html, body, div {
