--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
 </head>
 <body>
     <div>
-        Telegram GoTo
+        <span class="input input--kyo">
+            <input class="input__field input__field--kyo" type="text" id="input-19" />
+            <label class="input__label input__label--kyo" for="input-19">
+                <span class="input__label-content input__label-content--kyo">Укажите ссылку или @username</span>
+            </label>
+        </span>
     </div>
     <style>
         html, body, div {
@@ -72,6 +77,109 @@
         }
         div {
             text-align: center;
+        }
+        .input {
+            position: relative;
+            z-index: 1;
+            display: inline-block;
+            margin: 1em;
+            max-width: 400px;
+            width: calc(100% - 2em);
+            vertical-align: top;
+        }
+
+        .input__field {
+            position: relative;
+            display: block;
+            float: right;
+            padding: 0.8em;
+            width: 60%;
+            border: none;
+            border-radius: 0;
+            background: #f0f0f0;
+            color: #aaa;
+            font-weight: bold;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            -webkit-appearance: none; /* for box shadows to show on iOS */
+        }
+
+        .input__field:focus {
+            outline: none;
+        }
+
+        .input__label {
+            display: inline-block;
+            float: right;
+            padding: 0 1em;
+            width: 40%;
+            color: #6a7989;
+            font-weight: bold;
+            font-size: 70.25%;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        .input__label-content {
+            position: relative;
+            display: block;
+            padding: 1.6em 0;
+            width: 100%;
+        }
+        .input--kyo {
+            z-index: auto;
+        }
+
+        .input__field--kyo {
+            padding: 0.85em 1.5em;
+            width: 100%;
+            border-radius: 2em;
+            background: #fff;
+            color: #535d92;
+        }
+
+        .input__label--kyo {
+            z-index: 0;
+            padding: 0 0 0 2em;
+            width: 100%;
+            text-align: left;
+        }
+
+        .input__label--kyo::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            width: 100%;
+            height: 100%;
+            background: rgba(11, 43, 205, 0.6);
+            opacity: 0;
+            -webkit-transition: opacity 0.3s;
+            transition: opacity 0.3s;
+            pointer-events: none;
+        }
+
+        .input__label-content--kyo {
+            padding: 0.5em 0;
+        }
+
+        .input__field--kyo:focus,
+        .input__field--kyo:focus +  .input__label--kyo .input__label-content--kyo {
+            z-index: 10000;
+        }
+
+        .input__field--kyo:focus + .input__label--kyo {
+            color: #fff;
+        }
+
+        .input__field--kyo:focus + .input__label--kyo::after {
+            opacity: 1;
         }
     </style>
 </body>
