--- a/index.html
+++ b/index.html
@@ -68,16 +68,14 @@
         </span>
     </div>
     <style>
-        html, body, div {
+        html, body {
             height: 100%;
             width: 100%;
             height: 100vh;
             width: 100vw;
             margin: 0;
         }
-        div {
-            text-align: center;
-        }
+        
         .input {
             position: relative;
             z-index: 1;
