--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </script>
 </head>
 <body>
-    <div>
+    <div class="container">
         <span class="input input--kyo">
             <input class="input__field input__field--kyo" type="text" id="input-19" />
             <label class="input__label input__label--kyo" for="input-19">
@@ -74,6 +74,12 @@
             height: 100vh;
             width: 100vw;
             margin: 0;
+        }
+        
+        .container {
+            margin: 0 auto;
+            text-align: center;
+            overflow: hidden;
         }
         
         .input {
