--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
         </span>
     </div>
     <style>
+        *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
+        .clearfix:before, .clearfix:after { content: ''; display: table; }
+        .clearfix:after { clear: both; }
+        
         html, body {
             height: 100%;
             width: 100%;
             height: 100vh;
             width: 100vw;
             margin: 0;
+            font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         
         .container {
