--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="application-name" content="tgo.to">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <title>Lightning⚡️</title>
+    <title>Telegram GoTo⚡️</title>
     
     <script>
 ;(function(l, projectPages) {
@@ -59,6 +59,7 @@
     </script>
 </head>
 <body>
+    <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
             <input class="input__field input__field--kyo" type="text" id="input-19" />
