--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <span class="input input--kyo">
             <input class="input__field input__field--kyo" type="text" id="input-19" />
             <label class="input__label input__label--kyo" for="input-19">
-                <span class="input__label-content input__label-content--kyo">Укажите ссылку или @username</span>
+                <span class="input__label-content input__label-content--kyo">Укажите ссылку t.me/ или @username</span>
             </label>
         </span>
     </div>
