--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             margin: 0 auto;
             text-align: center;
             overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
         }
         
         .input {
