--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         .clearfix:after { clear: both; }
         
         html, body {
-            height: 100%;
+            min-height:100%; 
+            height:auto;
             width: 100%;
-            height: 100vh;
             width: 100vw;
             margin: 0;
             font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
