--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100%;
+            min-height:100%;
+            height:auto;
         }
         
         .input {
