--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head> <meta charset="utf-8" /> <title>TelegramGo</title> <script >    
+<!DOCTYPE html><html><head> <meta charset="utf-8" /> <title>TelegramGoTo</title> <script >    
 ;(function(l, projectPages) {
   var repo = projectPages ? '/' + l.pathname.split('/')[1] : ''
    /* redirect all 404 trafic to index.html */
