--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             height:100%;
         }
         
+        input[type="text"], textarea {
+          background-color : #DDDDDD;
+        }
+        
         .input {
             position: relative;
             z-index: 1;
