--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
             z-index: 1;
             display: inline-block;
             margin: 1em;
-            max-width: 1000px;
-            width: calc(100% - 2em);
+            max-width: 400px;
+            width: calc(100% - 1em);
             vertical-align: top;
+            text-transform: lowercase;
         }
 
         .input__field {
