--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         e.preventDefault();
     });
         
-    document.getElementByClassName("input__field").onkeypress = function() {
+    document.getElementsByClassName("input__field").onkeypress = function() {
         document.cookie = "tglink=" + document.getElementsByClassName("input__field")[0].value;
         console.log(document.cookie.tglink)
     };
