--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="input__field input__field--kyo" type="text" id="input-19 input__field" />
+            <input class="input__field input__field--kyo" type="text" id="input-19" />
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку t.me/ или @username</span>
             </label>
@@ -203,9 +203,9 @@
         }
     </style>
     <script>
-        document.getElementById("input__field").addEventListener("keypress", updateCookie);
+        document.getElementById("input-19").addEventListener("keypress", updateCookie);
         function updateCookie() {
-            document.cookie = "tglink=" + document.getElementById("input__field").value;
+            document.cookie = "tglink=" + document.getElementById("input-19").value;
             console.log(document.cookie.tglink);
         }
     </script>
