--- a/index.html
+++ b/index.html
@@ -212,8 +212,14 @@
             opacity: 1;
         }
     </style>
-    <script>
+<input type="text" id="demo">
 
-    </script>
+<script>
+document.getElementById("demo").addEventListener("keypress", myFunction);
+
+function myFunction() {
+    document.getElementById("demo").style.backgroundColor = "red";
+}
+</script>
 </body>
 </html>
