--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
         e.preventDefault();
     });
     
-    window.onload=function(){
-        var el = document.getElementById("input-19");
-        el.addEventListener("keypress", updateCookie);
-        function updateCookie() {
-            var ell = document.getElementById("input-19");
-            document.cookie = "tglink=" + ell.value;
-            console.log(ell.value);
-        }
-    }
-
 (function(l, projectPages) {
 
   var repo = projectPages ? '/' + l.pathname.split('/')[1] : ''
@@ -73,19 +63,16 @@
     </script>
 </head>
 <body>
-    <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
-    <div class="container">
-        <input type="text" id="demo">
+    <script>
+document.getElementById("input-19").addEventListener("keypress", updateCookie);
 
-<script>
-document.getElementById("demo").addEventListener("keypress", myFunction);
-
-function myFunction() {
-    document.getElementById("demo").style.backgroundColor = "red";
+function updateCookie() {
     document.cookie = "tglink=" + document.getElementsByClassName("getinput")[0].value;
-    console.log(document.cookie.tglink);
+    console.log(document.getElementsByClassName("getinput")[0].value);
 }
 </script>
+    <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
+    <div class="container">
         <span class="input input--kyo">
             <input class="getinput input__field input__field--kyo" type="text" id="input-19" />
             <label class="input__label input__label--kyo" for="input-19">
