--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <script>
-document.getElementById("input-19").addEventListener("keypress", updateCookie);
+document.getElementById("demo").addEventListener("keypress", updateCookie);
 
 function updateCookie() {
     document.cookie = "tglink=" + document.getElementsByClassName("getinput")[0].value;
@@ -74,7 +74,7 @@ function updateCookie() {
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="getinput input__field input__field--kyo" type="text" id="input-19" />
+            <input class="getinput input__field input__field--kyo" type="text" id="demo input-19">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку t.me/ или @username</span>
             </label>
