--- a/index.html
+++ b/index.html
@@ -66,20 +66,18 @@
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="getinput input__field input__field--kyo" type="text" id="demo input-19">
+            <input class="getinput input__field input__field--kyo" type="text" id="input-19" onkeypress="updateCookie()">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку t.me/ или @username</span>
             </label>
         </span>
     </div>
         <script>
-document.getElementById("demo").addEventListener("keypress", updateCookie);
-
-function updateCookie() {
-    document.cookie = "tglink=" + document.getElementsByClassName("getinput")[0].value;
-    console.log(document.getElementsByClassName("getinput")[0].value);
-}
-</script>
+        function updateCookie() {
+            document.cookie = "tglink=" + document.getElementsByClassName("getinput")[0].value;
+            console.log(document.getElementsByClassName("getinput")[0].value);
+        }
+        </script>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
         .clearfix:before, .clearfix:after { content: ''; display: table; }
