--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Telegram GoTo⚡️</title>
     
     <script>    
-    document.document.getElementsByClassName("getinput")[0].value = document.cookie.tglink;
+    document.getElementsByClassName("getinput")[0].value = document.cookie.tglink;
     document.addEventListener('gesturestart', function (e) {
         e.preventDefault();
     });
