--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <meta name="theme-color" content="#ffffff">
     <title>Telegram GoTo⚡️</title>
     
-    <script>    
-    document.getElementsByClassName("getinput")[0].value = document.cookie.tglink;
+    <script>
+    window.onload = (function () {
+        document.getElementsByClassName("getinput")[0].value = document.cookie.tglink;
+    })
+    
     document.addEventListener('gesturestart', function (e) {
         e.preventDefault();
     });
