--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
         
     window.onload = (function () {
-        var currentCookie = getCookie(tglink);
+        var currentCookie = getCookie('tglink');
         document.getElementsByClassName("getinput")[0].value = currentCookie;
     });
     
