--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
     
     <script>
     function getCookie(cname) {
-        var nameEQ = name + "=";
-        var ca = document.cookie.split(';');
-        for(var i=0;i < ca.length;i++) {
-            var c = ca[i];
-            while (c.charAt(0)==' ') c = c.substring(1,c.length);
-            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        var pattern = RegExp(name + "=.[^;]*")
+        matched = document.cookie.match(pattern)
+        if(matched){
+            var cookie = matched[0].split('=')
+            return cookie[1]
         }
-        return null;
+        return false
     }
         
     window.onload = (function () {
