--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     window.onload = (function () {
         var currentCookie = getCookie('tglink');
         document.getElementsByClassName("getinput")[0].value = currentCookie;
-        console.log(currentCookie)
+        console.log(currentCookie);
     });
     
     document.addEventListener('gesturestart', function (e) {
