--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="getinput input__field input__field--kyo" type="text" id="input-19" onkeypress="updateCookie()">
+            <input class="getinput input__field input__field--kyo" type="text" id="input-19" oninput="updateCookie()">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку t.me/ или @username</span>
             </label>
