--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
             -o-transition:      color 1s;
             transition:         color 1s;
         }
+        .notValid_not {
+            color: #6a7989;
+        }
     </style>
 </body>
 </html>
