--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
     }
+        
+    function resetErrorStyle() {
+            if (document.getElementsByClassName("getinput")[0].value.charAt(0) !== '') {
+                var i;
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+                }
+            }
+    }
     
 (function(l, projectPages) {
 
@@ -109,7 +118,7 @@
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="getinput input__field input__field--kyo" type="text" id="input-19" oninput="cookieMaster()">
+            <input class="getinput input__field input__field--kyo" type="text" id="input-19" oninput="cookieMaster()" onkeydown="resetErrorStyle">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
@@ -246,11 +255,11 @@
         }
         .notValid_not {
             color: #6a7989;
-            -webkit-transition: color 1s;
-            -moz-transition:    color 1s;
-            -ms-transition:     color 1s;
-            -o-transition:      color 1s;
-            transition:         color 1s;
+            -webkit-transition: color 0.3s;
+            -moz-transition:    color 0.3s;
+            -ms-transition:     color 0.3s;
+            -o-transition:      color 0.3s;
+            transition:         color 0.3s;
         }
     </style>
 </body>
