--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
         
     function resetErrorStyle() {
-            if (document.getElementsByClassName("getinput")[0].value.charAt(0) !== '') {
+            if (document.getElementsByClassName("getinput")[0].value == '') {
                 var i;
                 for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                     document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
