--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
     }
         
     function resetErrorStyle() {
+        if (event.code == 'Delete' || event.code == 'Backspace' || event.key == 'Delete' || event.key == 'Backspace') {
             if (document.getElementsByClassName("getinput")[0].value == '') {
                 var i;
                 for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                     document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
                 }
             }
+        }
     }
     
 (function(l, projectPages) {
