--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             }
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
-        if(isEmpty(document.getElementsByClassName("getinput")[0])) {
+        if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
             console.log('empty')
         } else {
             console.log('NOTempty')
