--- a/index.html
+++ b/index.html
@@ -70,14 +70,6 @@
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
         if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
-            console.log('empty')
-        } else {
-            console.log('NOTempty')
-        }
-    }
-        
-    function resetErrorStyle() {
-        if (document.getElementsByClassName("getinput")[0].length == 0) {
             var i;
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                 document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
@@ -131,7 +123,7 @@
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
         <span class="input input--kyo">
-            <input class="getinput input__field input__field--kyo" type="text" id="input-19" oninput="cookieMaster()" onkeyup="resetErrorStyle()">
+            <input class="getinput input__field input__field--kyo" type="text" id="input-19" oninput="cookieMaster()">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
