--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         else {
             var i;
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
-                document.getElementsByClassName("notValid_not")[i].style.color = "#fff";
+                document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
             }
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
         if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
             var i;
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
-                document.getElementsByClassName("notValid_not")[i].style.color = "#fff";
+                document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
             }
         }
     }
