--- a/index.html
+++ b/index.html
@@ -64,17 +64,31 @@
         }
         else {
             var i;
-            for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
-                document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+            if (document.activeElement == document.getElementsByClassName("getinput")[0]) {                
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+                }
+            }
+            else {
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#fff";
+                }
+            }
+        }
+        if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
+            var i;
+            if (document.activeElement == document.getElementsByClassName("getinput")[0]) {
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+                }
+            }
+            else {
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#fff";
+                }
             }
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
-        if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
-            var i;
-            for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
-                document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
-            }
-        }
     }
     
 (function(l, projectPages) {
