--- a/index.html
+++ b/index.html
@@ -56,20 +56,18 @@
     }
         
     function cookieMaster() {
+        var i;
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) !== '@' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 'h' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 't') {
-            var i;
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                 document.getElementsByClassName("notValid_not")[i].style.color = "#ff0033";
             }
         }
-        else {
-            var i;             
+        else {           
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                 document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
             }
         }
         if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
-            var i;
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                 document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
             }
@@ -79,7 +77,7 @@
         
     function colorState() {
         var i;
-        if (document.activeElement == input) {
+        if (document.getElementsByClassName("getinput")[0] === document.activeElement) {
             console.log('yep')
             for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
                 document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
