--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     }
         
     function colorState() {
+        console.log('yep')
         var i;
         if (document.getElementsByClassName("getinput")[0] === document.activeElement) {
             console.log('yep')
